--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Scrooge · Phoenix Framework</title>
+    <title>Scrooge</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
@@ -12,12 +12,21 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+            <% user = Guardian.Plug.current_resource(@conn) %>
+            <%= if is_nil(user) do %>
+              <li>Not logged in</li>
+              <li>
+                <%= link "Login", to: Routes.session_path(@conn, :login) %>
+              </li>
+            <% else %>
+              <li>
+                <%= user.username %>
+              </li>
+              <li>
+                <%= link "Logout", to: Routes.session_path(@conn, :logout), method: :post %>
+              </li>
+            <% end %>
           </ul>
-        </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
       </section>
     </header>
     <main role="main" class="container">
