--- a/lib/scrooge_web/templates/page/index.html.eex
+++ b/lib/scrooge_web/templates/page/index.html.eex
@@ -1,35 +1,22 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>A productive web framework that<br/>does not compromise speed or maintainability.</p>
+  <h1><%= gettext "Welcome to %{name}!", name: "Scrooge" %></h1>
+  <p>Protect your money from energy companies.</p>
 </section>
 
 <section class="row">
   <article class="column">
     <h2>Resources</h2>
     <ul>
-      <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.4/CHANGELOG.md">v1.4 Changelog</a>
-      </li>
-    </ul>
-  </article>
-  <article class="column">
-    <h2>Help</h2>
-    <ul>
-      <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
-      </li>
-      <li>
-        <a href="https://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on Freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
+      <% user = Guardian.Plug.current_resource(@conn) %>
+      <%= if not is_nil(user) do %>
+        <li>
+          <%= link "Logout", to: Routes.session_path(@conn, :logout), method: :post %>
+        </li>
+      <% else %>
+        <li>
+          <%= link "Login", to: Routes.session_path(@conn, :login) %>
+        </li>
+      <% end %>
     </ul>
   </article>
 </section>
