--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -8,35 +8,47 @@
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
-    <header>
-      <section class="container">
-        <nav role="navigation">
-          <ul>
-            <% user = Guardian.Plug.current_resource(@conn) %>
-            <%= if is_nil(user) do %>
-              <li>Not logged in</li>
-              <li>
-                <%= link "Login", to: Routes.session_path(@conn, :login) %>
-              </li>
-            <% else %>
-              <li>
-                <%= user.username %>
-              </li>
-              <li>
-                <%= link "Logout", to: Routes.session_path(@conn, :logout), method: :post %>
-              </li>
-            <% end %>
-          </ul>
-      </section>
-    </header>
-    <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-      <%= render @view_module, @view_template, assigns %>
-      Build date: <%= Application.get_env(:scrooge, :build_date) %>
-      VCS ref: <%= Application.get_env(:scrooge, :vcs_ref) %>
-    </main>
-    <%= csrf_meta_tag() %>
-    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+          <%= link("Scrooge", to: Routes.page_path(@conn, :index), class: "navbar-brand") %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+              <ul class="navbar-nav mr-auto">
+                  <%= if Scrooge.Auth.user_signed_in?(@conn) do %>
+                      <li class="nav-item <%= active_class(@active, "amber") %>" >
+                          <%= link("Local", to: Routes.page_path(@conn, :amber), class: "nav-link") %>
+                      </li>
+                      <li class="nav-item <%= active_class(@active, "tesla") %>">
+                          <%= link("Tesla", to: Routes.page_path(@conn, :tesla), class: "nav-link") %>
+                      </li>
+
+                      <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+                              <%= Scrooge.Auth.current_user(@conn).username %>
+                          </a>
+                          <div class="dropdown-menu">
+                              <%= link "Logout", to: Routes.session_path(@conn, :logout), method: :post, class: "dropdown-item"%>
+                          </div>
+                      </li>
+                  <% else %>
+                      <li class="nav-item <%= active_class(@active, "login") %>">
+                          <%= link("Login", to: Routes.session_path(@conn, :login), class: "nav-link") %>
+                      </li>
+                  <% end %>
+
+              </ul>
+          </div>
+      </nav>
+
+      <main role="main" class="container">
+          <%= Enum.map(get_flash(@conn), fn {flash_key, flash_message} -> %>
+              <p class="alert alert-<%= flash_key %>"><%= flash_message %></p>
+          <% end) %>
+          <%= render @view_module, @view_template, assigns %>
+      </main>
+      <%= csrf_meta_tag() %>
+      <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
