--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -23,6 +23,11 @@
                       <li class="nav-item <%= active_class(@active, "tesla") %>">
                           <%= link("Tesla", to: Routes.page_path(@conn, :tesla), class: "nav-link") %>
                       </li>
+                      <%= if Scrooge.Auth.user_is_admin?(@conn) do %>
+                          <li class="nav-item <%= active_class(@active, "users") %>">
+                              <%= link("Users", to: Routes.user_path(@conn, :index), class: "nav-link") %>
+                          </li>
+                      <% end %>
 
                       <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
