Add version information back again

--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -53,6 +53,14 @@
           <% end) %>
           <%= render @view_module, @view_template, assigns %>
       </main>
+
+      <footer class="text-muted small">
+          <div class="container">
+              Version <%= Application.get_env(:scrooge, :vcs_ref) %>
+              built on <%= Application.get_env(:scrooge, :build_date) %>
+          </div>
+      </footer>
+
       <%= csrf_meta_tag() %>
       <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
