--- a/lib/scrooge_web/templates/live/tesla.html.leex
+++ b/lib/scrooge_web/templates/live/tesla.html.leex
@@ -14,7 +14,7 @@
 
     <tr>
       <th>Last Update time</th>
-      <td><%= date_time_to_local(@tesla_state["history"]["date_time"])  %></td>
+      <td><%= @tesla_state["history"]["date_time"] |> parse_date_time() |> date_time_to_local()  %></td>
     </tr>
 
     <tr>
