--- a/lib/scrooge_web/templates/page/index.html.eex
+++ b/lib/scrooge_web/templates/page/index.html.eex
@@ -14,5 +14,5 @@
         </li>
     </ul>
 <% else %>
-    Please <%= link("Login", to: Routes.session_path(@conn, :login)) %>.
+    Please <%= link("Login", to: Routes.session_path(@conn, :new)) %>.
 <% end %>
