Support next= parameter in logins

--- a/lib/scrooge_web/templates/session/new.html.eex
+++ b/lib/scrooge_web/templates/session/new.html.eex
@@ -1,6 +1,7 @@
 <h2>Login Page</h2>
 
 <%= form_for @changeset, @action, fn f -> %>
+  <%= hidden_input f, :next, value: @next %>
 
   <div class="form-group">
     <%= label f, :username, class: "control-label" %>
