--- a/lib/scrooge_web/templates/session/new.html.eex
+++ b/lib/scrooge_web/templates/session/new.html.eex
@@ -1,19 +1,8 @@
 <h2>Login Page</h2>
 
 <%= form_for @changeset, @action, fn f -> %>
-  <%= hidden_input f, :next, value: @next %>
-
-  <div class="form-group">
-    <%= label f, :username, class: "control-label" %>
-    <%= text_input f, :username, class: "form-control" %>
-    <%= error_tag f, :username %>
-  </div>
-
-  <div class="form-group">
-    <%= label f, :password, class: "control-label" %>
-    <%= password_input f, :password, class: "form-control" %>
-    <%= error_tag f, :password %>
-  </div>
+  <%= text_input_field(f, :username) %>
+  <%= password_input_field(f, :password) %>
 
   <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
