--- a/lib/scrooge_web/templates/user/new.html.eex
+++ b/lib/scrooge_web/templates/user/new.html.eex
@@ -2,30 +2,19 @@
 
 <%= form_for @changeset, Routes.user_path(@conn, :create), fn f -> %>
   <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
+      <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+      </div>
   <% end %>
 
-  <%= label f, :username %>
-  <%= text_input f, :username %>
-  <%= error_tag f, :username %>
+  <%= text_input_field(f, :username) %>
+  <%= password_input_field(f, :password) %>
+  <%= password_input_field(f, :password_confirmation) %>
 
-  <%= label f, :password %>
-  <%= password_input f, :password %>
-  <%= error_tag f, :password %>
+  <%= checkbox_field(f, :is_admin) %>
 
-  <%= label f, :password_confirmation %>
-  <%= password_input f, :password_confirmation %>
-  <%= error_tag f, :password_confirmation %>
-
-  <%= label f, :is_admin %>
-  <%= checkbox f, :is_admin %>
-  <%= error_tag f, :is_admin %>
-
-  <div>
-    <%= submit "Save" %>
+  <div class="form-group">
+      <span><%= submit "Save" , class: "btn btn-primary" %></span>
+      <span><%= link "Back", to: Routes.user_path(@conn, :index), class: "btn btn-secondary" %></span>
   </div>
 <% end %>
-
-<span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
