--- a/lib/scrooge_web/templates/user/show.html.eex
+++ b/lib/scrooge_web/templates/user/show.html.eex
@@ -14,6 +14,6 @@
 
 </ul>
 
-<span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
-<span><%= link "Password", to: Routes.user_path(@conn, :password_edit, @user) %></span>
-<span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
+<span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user), class: "btn btn-secondary" %></span>
+<span><%= link "Password", to: Routes.user_path(@conn, :password_edit, @user), class: "btn btn-secondary" %></span>
+<span><%= link "Back", to: Routes.user_path(@conn, :index), class: "btn btn-secondary" %></span>
