--- a/lib/scrooge_web/templates/user/password.html.eex
+++ b/lib/scrooge_web/templates/user/password.html.eex
@@ -2,22 +2,16 @@
 
 <%= form_for @changeset, Routes.user_path(@conn, :password_edit, @user), fn f -> %>
   <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>oops, something went wrong! please check the errors below.</p>
-    </div>
+      <div class="alert alert-danger">
+          <p>oops, something went wrong! please check the errors below.</p>
+      </div>
   <% end %>
 
-  <%= label f, :password %>
-  <%= password_input f, :password %>
-  <%= error_tag f, :password %>
-
-  <%= label f, :password_confirmation %>
-  <%= password_input f, :password_confirmation %>
-  <%= error_tag f, :password_confirmation %>
+  <%= password_input_field(f, :password) %>
+  <%= password_input_field(f, :password_confirmation) %>
 
   <div>
-    <%= submit "save" %>
+      <span><%= submit "Save" , class: "btn btn-primary" %></span>
+      <span><%= link "Back", to: Routes.user_path(@conn, :index), class: "btn btn-secondary" %></span>
   </div>
 <% end %>
-
-<span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
