--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -20,8 +20,14 @@
                       <li class="nav-item <%= active_class(@active, "amber") %>" >
                           <%= link("Amber", to: Routes.page_path(@conn, :amber), class: "nav-link") %>
                       </li>
-                      <li class="nav-item <%= active_class(@active, "tesla") %>">
-                          <%= link("Tesla", to: Routes.page_path(@conn, :tesla), class: "nav-link") %>
+                      <li class="nav-item dropdown <%= active_class(@active, "tesla") %>">
+                          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+                              Tesla
+                          </a>
+                          <div class="dropdown-menu">
+                              <%= link("Tesla", to: Routes.page_path(@conn, :tesla), class: "dropdown-item") %>
+                              <%= link("Usage", to: Routes.page_path(@conn, :tesla_usage), class: "dropdown-item") %>
+                          </div>
                       </li>
                       <%= if Scrooge.Auth.user_is_admin?(@conn) do %>
                           <li class="nav-item <%= active_class(@active, "users") %>">
