--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -17,8 +17,8 @@
           <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav mr-auto">
                   <%= if Scrooge.Auth.user_signed_in?(@conn) do %>
-                      <li class="nav-item <%= active_class(@active, "amber") %>" >
-                          <%= link("Amber", to: Routes.page_path(@conn, :amber), class: "nav-link") %>
+                      <li class="nav-item <%= active_class(@active, "aemo") %>" >
+                          <%= link("Aemo", to: Routes.page_path(@conn, :aemo), class: "nav-link") %>
                       </li>
                       <li class="nav-item dropdown <%= active_class(@active, "tesla") %>">
                           <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
