--- a/lib/scrooge_web/templates/page/index.html.eex
+++ b/lib/scrooge_web/templates/page/index.html.eex
@@ -7,7 +7,7 @@
             <%= link "Telsa", to: Routes.page_path(@conn, :tesla) %>
         </li>
         <li>
-            <%= link "Amber", to: Routes.page_path(@conn, :amber) %>
+            <%= link "Aemo", to: Routes.page_path(@conn, :aemo) %>
         </li>
         <li>
             <%= link "Logout", to: Routes.session_path(@conn, :logout), method: :post %>
