--- a/lib/scrooge_web/templates/live/tesla.html.leex
+++ b/lib/scrooge_web/templates/live/tesla.html.leex
@@ -8,6 +8,9 @@
          crossorigin="">
  </script>
 
+<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
+
 <%= if not is_nil(@tesla_state) do %>
 <table class="table">
   <tbody>
