Update robotica stuff

--- a/lib/scrooge_web/templates/live/tesla.html.leex
+++ b/lib/scrooge_web/templates/live/tesla.html.leex
@@ -12,6 +12,7 @@
 <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
 
 <%= inspect @tesla_state %>
+<%= inspect @active_conditions %>
 
 <%= if map_size(@tesla_state) > 0 do %>
 <table class="table">
