--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -57,7 +57,7 @@
           <%= Enum.map(get_flash(@conn), fn {flash_key, flash_message} -> %>
               <p class="alert alert-<%= flash_key %>"><%= flash_message %></p>
           <% end) %>
-          <%= render @view_module, @view_template, assigns %>
+          <%= @inner_content %>
       </main>
 
       <footer class="text-muted small">
