Set id for phx-hooks.

--- a/lib/scrooge_web/templates/live/tesla.html.leex
+++ b/lib/scrooge_web/templates/live/tesla.html.leex
@@ -129,6 +129,7 @@
      data-door-pr=false
      data-door-ft=false
      data-door-rt=false
+     id="map"
 >
 </div>
 
@@ -136,7 +137,7 @@
   <div id="mapid"></div>
 </div>
 
-<div phx-hook="MapDetails" style="display: none;">>
+<div phx-hook="MapDetails" style="display: none;" id="map-details">
     <div id="details">
         <table class="table">
           <tbody>
